l10n: or, translation update
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@106991 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/or/videos/video_fx13.lang
+++ b/or/videos/video_fx13.lang
@@ -1,42 +1,42 @@
 ;[What's New in Firefox] It's now easier and faster to get where you want to go with the latest Firefox.
-[What's New in Firefox] It's now easier and faster to get where you want to go with the latest Firefox.
+[Firefox ରେ କଣ ନୂଆ ଅଛି] ନୂତନ Firefox ଦ୍ୱାରା ବର୍ତ୍ତମାନ ସହଜରେ ଏବଂ ଶୀଘ୍ର ବ୍ରାଉଜ କରିହୁଏ।
 
 
 ;With the redesigned Home page you can now easily access and navigate to your most commonly used menu options.
-With the redesigned Home page you can now easily access and navigate to your most commonly used menu options.
+ପୁନଃରଚିତ ମୂଖ୍ୟ ପୃଷ୍ଠା ସହିତ ଆପଣ ବର୍ତ୍ତମାନ ସହଜରେ ଆପଣଙ୍କର ଅଧିକାଂଶ ସମୟରେ ବ୍ୟବହୃତ ତାଲିକା ବିକଳ୍ପଗୁଡ଼ିକୁ ଯାଇପାରିବେ।
 
 
 ;Like downloads, bookmarks, history, add-ons, sync and settings.
-Like downloads, bookmarks, history, add-ons, sync and settings.
+ଆହରଣ, ଚିହ୍ନିତ ସ୍ଥାନ, ପୁରୁଣା ତତ୍ୟ, ଏଡ-ଅନ, ସନ୍ତୁଳନ ଏବଂ ସଂରଚନାକୁ ପସନ୍ଦ କରନ୍ତୁ।
 
 
 ;[New Tab Page] We've also added improvements to your New Tab page.
-[New Tab Page] We've also added improvements to your New Tab page.
+[ନୂତନ ଟ୍ୟାବ ପୃଷ୍ଠା] ଆମେ ବର୍ତ୍ତମାନ ଆପଣଙ୍କର ନୂତନ ଟ୍ୟାବ ପୃଷ୍ଠାରେ ମଧ୍ଯ ଉନ୍ନତିକୁ ଯୋଗ କରିଛୁ।
 
 
 ;With the New Tab page, you can now easily navigate to your most recent and frequently visited sites in one click.
-With the New Tab page, you can now easily navigate to your most recent and frequently visited sites in one click.
+ନୂତନ ଟ୍ୟାବ ପୃଷ୍ଠାରେ, ଆପଣ ବର୍ତ୍ତମାନ ସହଜରେ ସାମ୍ପ୍ରତିକ ଏବଂ ବାରମ୍ବାର ପରିଦର୍ଶନ କରୁଥିବା ୱେବସାଇଟକୁ ଯାଇପାରିବେ।
 
 
 ;To start using the New Tab page, create a new tab by clicking the '+' at the top of your browser.
-To start using the New Tab page, create a new tab by clicking the '+' at the top of your browser.
+ନୂତନ ଟ୍ୟାବ ପୃଷ୍ଠାର ବ୍ୟବହାର ଆରମ୍ଭ କରିବା ପାଇଁ, ଆପଣଙ୍କ ବ୍ରାଉଜର ଉପର ଭାଗରେ '+' କୁ କ୍ଲିକ କରି ନୂତନ ଏକ ଟ୍ୟାବ ନିର୍ମାଣ କରନ୍ତୁ।
 
 
 ;The New Tab page will now display thumbnails of your most recently and frequently visited websites from your Awesome Bar history.
-The New Tab page will now display thumbnails of your most recently and frequently visited websites from your Awesome Bar history.
+ନୂତନ ଟ୍ୟାବ ପୃଷ୍ଠା ବର୍ତ୍ତମାନ ଆପଣଙ୍କର ସାମ୍ପ୍ରତିକ ଏବଂ ବାରମ୍ବାର ପରିଦର୍ଶନ ହେଉଥିବା ୱେବସାଇଟକୁ ଆପଣଙ୍କର ସୁନ୍ଦର ପଟି ପୁରୁଣା ତଥ୍ୟରୁ ଥମ୍ବନେଲକୁ ଦର୍ଶାଇବ।
 
 
 ;You can customize your New Tab page by dragging the thumbnails around to change the order.
-You can customize your New Tab page by dragging the thumbnails around to change the order.
+ଆପଣ ନୂତନ ଟ୍ୟାବ ପୃଷ୍ଠାକୁ ଇଚ୍ଛାମୁତାବକ କରିବା ପାଇଁ ଥମ୍ବନେଲକୁ କ୍ରମ ପରିବର୍ତ୍ତନ ପାଇଁ ଚାରିପାଖେ ବୁଲାନ୍ତୁ।
 
 
 ;Click on the pushpin to lock the site into place, or the 'X' button to remove a site.
-Click on the pushpin to lock the site into place, or the 'X' button to remove a site.
+ସାଇଟକୁ ଠିକ ସ୍ଥାନରେ ରଖିବା ପାଇଁ ପୁସପିନ ଉପରେ କ୍ଲିକ କରନ୍ତୁ, ଅଥବା ସାଇଟକୁ ବାହାର କରିବା ପାଇଁ 'X' ବଟନକୁ କ୍ଲିକ କରନ୍ତୁ।
 
 
 ;You can also click the 'grid' icon in the top right of the page to go back to the blank new Tab page.
-You can also click the 'grid' icon in the top right of the page to go back to the blank new Tab page.
+ଖାଲି ନୂତନ ଟ୍ୟାବ ପୃଷ୍ଠାକୁ ଯିବା ପାଇଁ ପୃଷ୍ଠାର ଡ଼ାହାଣ ପାଖ ଉପର କୋଣରେ ଆପଣ 'grid' ଚିତ୍ର ସଂକେତକୁ ମଧ୍ଯ କ୍ଲିକ କରିପାରିବେ। 
 
 
 ;Get the latest Firefox now and start using these new features today!
-Get the latest Firefox now and start using these new features today!
+ନୂତନତମ Firefox କୁ ବର୍ତ୍ତମାନ ଆଣନ୍ତୁ ଏବଂ ଏହି ନୂତନ ବିଶେଷତାଗୁଡ଼ିକୁ ବ୍ୟବହାର କରିବା ଆରମ୍ଭ କରନ୍ତୁ!
