--- a/gu-IN/newsletter.lang
+++ b/gu-IN/newsletter.lang
@@ -50,146 +50,146 @@
 
 
 ;Subscribe to monthly updates and keep current with Mozilla news, including the latest tips and tricks for getting the most out of your Firefox browser. It’s the perfect way for us to keep in touch!
-Subscribe to monthly updates and keep current with Mozilla news, including the latest tips and tricks for getting the most out of your Firefox browser. It’s the perfect way for us to keep in touch!
+દર મહિને આવતા સુધારામાં ઉમેદવાર બનો અને Mozilla સમાચારો સાથે તાજા રહો, મોટાભાગનાં તમારા Firefox બ્રાઉઝરને મેળવવા માટે તાજેતરની મદદો અને યુક્તિઓને સમાવી રહ્યા છે. આ સંપર્કમાં રહેવાનો સારામાં સારો રસ્તો છે!
 
 
 ;We just sent you a confirmation message by email. Click on the confirmation link in this email to validate your subscription to this mailing list.
-We just sent you a confirmation message by email. Click on the confirmation link in this email to validate your subscription to this mailing list.
+અમે હમણાં ઇમેઇલ દ્દારા ખાતરી સંદેળો મોકલ્યો. આ મેઇલીંગ યાદીમાં તમારી ઉમેદવારીની ચકાસણી કરવા માટે આ ઇમેઇલમાં ખાતરી કડી પર ક્લિક કરો.
 
 
 ;Read all about it in our <span>newsletter</span>
-Read all about it in our <span>newsletter</span>
+અમારાં  <span>સૂચનાપત્ર</span> માં તેના વિશે બધુ વાંચો
 
 
 ;Your newsletter subscription has been confirmed.
-Your newsletter subscription has been confirmed.
+તમારી સૂચનાપત્ર ઉમેદવારીની ખાતરી કરી દેવામાં આવી છે.
 
 
 ;Format
-Format
+બંધારણ
 
 
 ;You’re All Set! <span>But Wait, There’s More</span>
-You’re All Set! <span>But Wait, There’s More</span>
+તમે બધા સુયોજિત છો! <span>પરંતુ રાહ જુઓ, વધારે ત્યાં છે</span>
 
 
 ;Want to get the most relevant info? Tell us a little more about yourself. And while you’re here, sign up for other Mozilla news.
-Want to get the most relevant info? Tell us a little more about yourself. And while you’re here, sign up for other Mozilla news.
+શું તમે સૌથી વધુ સંબંધિત માહિતી મેળવવા માંગો છો? તમારાં વિશે થોડુ વધારે અમને કહો. અને તમે જ્યારે અહિંયો હોય, ત્યારે બીજા Mozilla સમાચારો માટે સાઇન અપ કરો.
 
 
 ;Firefox & You
-Firefox & You
+Firefox અને તમે
 
 
 ;Our Other Newsletters:
-Our Other Newsletters:
+અમારા બીજા સૂચનાપત્રો:
 
 
 ;Get the latest tips and tricks for getting the most out of your favorite browser.
-Get the latest tips and tricks for getting the most out of your favorite browser.
+વધારે પસંદીદા બ્રાઉઝર મેળવવા માટે તાજેતરની મદદ અને યુક્તિઓ મેળવો.
 
 
 ;Firefox Mobile
-Firefox Mobile
+Firefox મોબાઇલ
 
 
 ;Learn about the hottest new add-ons and features for Firefox mobile.
-Learn about the hottest new add-ons and features for Firefox mobile.
+Firefox મોબાઇલ માટે નવાં તાજેતરનાં ઍડ-ઓન અને લક્ષણો વિશે શીખો.
 
 
 ;Beta News
-Beta News
+Beta સમાચારો
 
 
 ;Read about the latest features for Firefox desktop and mobile before the final release.
-Read about the latest features for Firefox desktop and mobile before the final release.
+છેલ્લા પ્રકાશન પહેલાં  Firefox ડેસ્કટોપ અને મોબાઇલ માટે તાજેતરનાં લક્ષણો વિશે વાંચો.
 
 
 ;Let’s Be Friends!
-Let’s Be Friends!
+ચાલો મિત્રો બનાવો!
 
 
 ;Firefox is also on your favorite social networking sites. Connect with us and join the conversation.
-Firefox is also on your favorite social networking sites. Connect with us and join the conversation.
+Firefox પણ તમારી પસંદીદા સામાજિક નેટવર્કિંગ સાઇટ પર છે. અમારી સાથે જોડાવો અને વાર્તાલાપમાં જોડાવો.
 
 
 ;Manage your <span>Newsletter Subscriptions</span>
-Manage your <span>Newsletter Subscriptions</span>
+તમારી <span>સૂચનાપત્ર ઉમેદવારીઓ</span> ને સંચાલિક કરો
 
 
 ;Subscribe
-Subscribe
+ઉમેદવાર બનો
 
 
 ;Unsubscribe
-Unsubscribe
+ઉમેદવારી હટાવી દો
 
 
 ;Check here if you’d like to be removed from all Mozilla emails
-Check here if you’d like to be removed from all Mozilla emails
+અહિંયા ચકાસો જો તમને બધા Mozilla ઇમેઇલમાંથી દૂર થવાનુ ગમે તો
 
 
 ;Remove me from all Mozilla emails
-Remove me from all Mozilla emails
+બધા Mozilla ઇમેઇલમાંથી મને દૂર કરો
 
 
 ;Save Preferences
-Save Preferences
+પસંદગીઓ સંગ્રહો
 
 
 ;Thanks for updating your email preferences.
-Thanks for updating your email preferences.
+તમારાં ઇમેઇલ પસંદગીઓને સુધારવા માટે તમારો આભાર.
 
 
 ;You've been unsubscribed.
-You've been unsubscribed.
+તમને ઉમેદવારીમાંથી હટાવી દેવામાં આવ્યા છે.
 
 
 ;We’re sorry to see you go. Would you mind telling us why you’re leaving?
-We’re sorry to see you go. Would you mind telling us why you’re leaving?
+તમને જતા જોઇને અમે દિલગીર છીએ. શું તમે અમને કહી શકો છો કે તમે શા માટે જઇ રહ્યા છો?
 
 
 ;You send too many emails.
-You send too many emails.
+તમે ઘણાં ઇમેઇલ મોકલ્યા છે.
 
 
 ;Your content wasn't relevant to me.
-Your content wasn't relevant to me.
+તમારુ સમાવિષ્ટ મને સંબંધિત ન હતુ.
 
 
 ;Your email design was too hard to read.
-Your email design was too hard to read.
+તમારી ઇમેઇલ રચના વાંચવા માટે ઘણી મુશ્કેલ હતી.
 
 
 ;I didn't sign up for this.
-I didn't sign up for this.
+આની માટે મેં સાઇન અપ કર્યુ નથી.
 
 
 ;I'm keeping in touch with Mozilla on Facebook and Twitter instead.
-I'm keeping in touch with Mozilla on Facebook and Twitter instead.
+હું તેને બદલે Facebook અને Twitter પર Mozilla સાથે સંપર્ક રાખી રહી છુ.
 
 
 ;Submit
-Submit
+ઉમેરો
 
 
 ;Thanks for telling us why you’re leaving.
-Thanks for telling us why you’re leaving.
+અમને કહેવા બદલ તમારો આભાર શામાટે તમે જઇ રહ્યા છો.
 
 
 ;Mozilla Newsletters
-Mozilla Newsletters
+Mozilla સૂચનાપત્રો
 
 
 ;Thanks! Please check your inbox to confirm your subscription.
-Thanks! Please check your inbox to confirm your subscription.
+તમારો આભાર! મહેરબાની કરીને તમારી ઉમેદવારીની ખાતરી કરવા માટે તમારાં ઇનબોક્સને ચકાસો.
 
 
 ;You'll receive an email from mozilla@e.mozilla.org to confirm your subscription. If you don't see it, check your spam filter. You must confirm your subscription to receive our newsletter.
-You'll receive an email from mozilla@e.mozilla.org to confirm your subscription. If you don't see it, check your spam filter. You must confirm your subscription to receive our newsletter.
+તમને તમારી ઉમેદવારીની ખાતરી કરવા માટે mozilla@e.mozilla.org માંથી ઇમેઇલ મળશે. જો તમે તેને ન જુઓ તો, તમારાં સ્પામ ફિલ્ટરને ચકાસો. તમને અમારા સૂચનાપત્રોને મેળવવા માટે તમારી ઉમેદવારીની ખાતરી કરવી જ જોઇએ.
 
 
 ;Please be sure to add our sending address: mozilla@e.mozilla.org to your address book to ensure we always reach your inbox.
-Please be sure to add our sending address: mozilla@e.mozilla.org to your address book to ensure we always reach your inbox.
+અમારાં સરનામાંને ઉમેરવા મહેરબાની કરીને ખાતરી કરો: ખાતરી કરવા માટે તમારુ  ઇમેઇલ સરનામુ  mozilla@e.mozilla.org અમે હંમેશા તમારા ઇનબોક્સ સુધી પહોંચીશુ.
 
 
