Updated Gujarati translations
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@107022 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/gu-IN/whatsnew.lang
+++ b/gu-IN/whatsnew.lang
@@ -2,23 +2,23 @@
 
 
 ;Hooray! Your Firefox is up to date.
-Hooray! Your Firefox is up to date.
+હુરે! તમારું Firefox અદ્યતન છે.
 
 
 ;Your Firefox is out of date.
-Your Firefox is out of date.
+તમારાં Firefox ની સમય સમાપ્તિ થઇ ગઇ છે.
 
 
 ;For security reasons, we recommend upgrading to the <a href="{url}">latest and greatest version</a>.
-For security reasons, we recommend upgrading to the <a href="{url}">latest and greatest version</a>.
+સુરક્ષા કારણો માટે, અમે <a href="{url}">તાજેતરની અને શ્રેષ્ઠ આવૃત્તિ</a> ને સુધારવાનો આગ્રહ રાખીએ છીએ.
 
 
 ;You’re running an unknown version of Firefox.
-You’re running an unknown version of Firefox.
+તમે Firefox ની અજ્ઞાત આવૃત્તિને ચલાવી રહ્યા છો.
 
 
 ;For security reasons, we recommend downloading to the <a href="{url}">latest and greatest version</a>.
-For security reasons, we recommend downloading to the <a href="{url}">latest and greatest version</a>.
+સુરક્ષા કારણો માટે, અમે <a href="{url}">તાજેતરની અને શ્રેષ્ઠ આવૃત્તિ</a> ને ડાઉનલોડ કરવાનો આગ્રહ રાખીએ છીએ.
 
 
 ;Get to your next task<br/>faster than ever
@@ -26,38 +26,38 @@ Get to your next task<br/>faster than ever
 
 
 ;See how the new features in Firefox help you browse faster and more efficiently.
-See how the new features in Firefox help you browse faster and more efficiently.
+જોઓ કે Firefox માં નવા લક્ષણો કેવી રીતે તમને ઝડપી બ્રાઉઝ અને વધારે કાર્યક્ષણ બનાવવા મદદ કરે છે.
 
 
 ;Learn more about <a href="{url}">the New Tab feature »</a>
-Learn more about <a href="{url}">the New Tab feature »</a>
+<a href="{url}">નવાં ટૅબ લક્ષણ »</a> વિશે વધારે શીખો
 
 
 ;Learn more about our <a href="{url}">redesigned home page »</a>
-Learn more about our <a href="{url}">redesigned home page »</a>
+અમારાં <a href="{url}">પુન:રચેલ ઘર પાનાં»</a> વિશે વધારે શીખો
 
 
 ;Keep in touch
-Keep in touch
+સંપર્ક રાખો
 
 
 ;Keep it moving
-Keep it moving
+તેને ખસેડવાનું રાખો
 
 
 ;Get Firefox » <b>for Android</b>
-Get Firefox » <b>for Android</b>
+Firefox મેળવો » <b>Android માટે</b>
 
 
 ;Keep it going
-Keep it going
+તેને ચાલુ રાખો
 
 
 ;Join Mozilla
-Join Mozilla
+Mozilla સાથે જોડાવો
 
 
 ;The Android Robot was reproduced from work created and <a href="%s">shared by Google</a> and used according to terms described in the <a href="%s">Creative Commons 3.0 Attribution License</a>.
-The Android Robot was reproduced from work created and <a href="%s">shared by Google</a> and used according to terms described in the <a href="%s">Creative Commons 3.0 Attribution License</a>.
+Android રોબોટને બનાવનાર કાર્યમાંથી પુનઃઉત્પાદન કરવામાં આવી હતી અને <a href="%s">Google દ્દારા વહેંચેલ છે</a> અને <a href="%s">Creative Commons 3.0 Attribution License</a> માં વર્ણવેલ મર્યાદાઓ અનુસાર વાપરેલ છે.
 
 
