--- a/gu-IN/videos/video_fx13.lang
+++ b/gu-IN/videos/video_fx13.lang
@@ -1,42 +1,42 @@
 ;[What's New in Firefox] It's now easier and faster to get where you want to go with the latest Firefox.
-[What's New in Firefox] It's now easier and faster to get where you want to go with the latest Firefox.
+[Firefox માં શુ નવુ છે] તે હવે મેળવવા માટે સરળ અને ઝડપી છે જ્યાં તમે તાજેતરનાં Firefox સાથે જવા માંગો છો.
 
 
 ;With the redesigned Home page you can now easily access and navigate to your most commonly used menu options.
-With the redesigned Home page you can now easily access and navigate to your most commonly used menu options.
+પુન:રચેલ ઘર પાનાં સાથે તમે તમારાં સામાન્ય રીતે વપરાયેલ મેનુ વિકલ્પોમાં સરળ રીતે પ્રવેશ અને સ્થળાંતર કરી શકો છો.
 
 
 ;Like downloads, bookmarks, history, add-ons, sync and settings.
-Like downloads, bookmarks, history, add-ons, sync and settings.
+જેમ કે ડાઉનલોડ, બુકમાર્ક, ઇતિહાસ, ઍડ-ઓન, સુમેળ અને સુયોજનો.
 
 
 ;[New Tab Page] We've also added improvements to your New Tab page.
-[New Tab Page] We've also added improvements to your New Tab page.
+[નવું ટૅબ પાનું] અમે પણ તમારાં નવા ટૅબ પાનામાં સુધારા ઉમેરાયેલ છે.
 
 
 ;With the New Tab page, you can now easily navigate to your most recent and frequently visited sites in one click.
-With the New Tab page, you can now easily navigate to your most recent and frequently visited sites in one click.
+નવાં ટૅબ પાના સાથે , તમે હવે એક જ ક્લિકમાં તમારી તાજેતરની અને વારંવાર મુલાકાત થયેલ સાઇટમાં સરળ રીતે પરિવહન કરી શકો છો.
 
 
 ;To start using the New Tab page, create a new tab by clicking the '+' at the top of your browser.
-To start using the New Tab page, create a new tab by clicking the '+' at the top of your browser.
+નવાં ટૅબ પાનાંને વાપરવાનુ શરૂ કરવા માટે, તમારા બ્રાઉઝરની ટોચે '+' પર ક્લિક કરીને નવાં ટૅબને બનાવો.
 
 
 ;The New Tab page will now display thumbnails of your most recently and frequently visited websites from your Awesome Bar history.
-The New Tab page will now display thumbnails of your most recently and frequently visited websites from your Awesome Bar history.
+તમારી ઓસમ બાર ઇતિહાસમાંથી તાજેતરની અને વારંવાર મુલાકાત થયેલ વેબસાઇટનાં થમ્ભનેઇલને હવે દર્શાવશે.
 
 
 ;You can customize your New Tab page by dragging the thumbnails around to change the order.
-You can customize your New Tab page by dragging the thumbnails around to change the order.
+ક્રમને બદલવા માટે થમ્ભનેઇલને ખેંચીને તમે તમારાં નવા ટૅબ પાનાંને વૈવિધ્યપૂર્ણ બનાવી શકો છો.
 
 
 ;Click on the pushpin to lock the site into place, or the 'X' button to remove a site.
-Click on the pushpin to lock the site into place, or the 'X' button to remove a site.
+સ્થાનમાં સાઇટને તાળુ મારવા માટે pushpin પર ક્લિક કરો, અથવા સાઇટને દૂર કરવા માટે  'X' બટન પર ક્લિક કરો.
 
 
 ;You can also click the 'grid' icon in the top right of the page to go back to the blank new Tab page.
-You can also click the 'grid' icon in the top right of the page to go back to the blank new Tab page.
+ખાલી નવાં ટૅબ પાનામાં જવા માટે પાનાંની જમણી બાજુ ટોચમાં 'જાળી' ચિહ્ન પર તમે ક્લિક કરી શકો છો.
 
 
 ;Get the latest Firefox now and start using these new features today!
-Get the latest Firefox now and start using these new features today!
+હવે તાજેતરનું Firefox મેળવો અને આજે નવાં લક્ષણોને વાપરવાનું શરૂ કરો!
