Updated Gujarati translations
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@107026 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/gu-IN/whatsnew.lang
+++ b/gu-IN/whatsnew.lang
@@ -22,7 +22,7 @@
 
 
 ;Get to your next task<br/>faster than ever
-Get to your next task<br/>faster than ever
+તમારી આગળની ક્રિયા <br/> વધારે ઝડપથી મેળવો
 
 
 ;See how the new features in Firefox help you browse faster and more efficiently.
