--- a/csb/whatsnew.lang
+++ b/csb/whatsnew.lang
@@ -6,7 +6,7 @@ Hùra! Twój Firefox je zaktualniony.
 
 
 ;Your Firefox is out of date.
-Mùszisz zaktualnic Firefoksa.
+Nót je zaktualnic Firefoksa.
 
 
 ;For security reasons, we recommend upgrading to the <a href="{url}">latest and greatest version</a>.
