Translate Whats New page for Firefox 13 into Arabic
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@107050 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/ar/videos/video_fx13.lang
+++ b/ar/videos/video_fx13.lang
@@ -1,42 +1,42 @@
 ;[What's New in Firefox] It's now easier and faster to get where you want to go with the latest Firefox.
-[What's New in Firefox] It's now easier and faster to get where you want to go with the latest Firefox.
+[ما الجديد في فيَرفُكس] أصبح الوصول إلى حيث تريد أسرع وأسهل مع آخر فيَرفُكس.
 
 
 ;With the redesigned Home page you can now easily access and navigate to your most commonly used menu options.
-With the redesigned Home page you can now easily access and navigate to your most commonly used menu options.
+مع التصميم الجديد لصفحة البداية يمكنك الوصول بسهولة إلى أكثر خيارات القائمة التي تستخدمها.
 
 
 ;Like downloads, bookmarks, history, add-ons, sync and settings.
-Like downloads, bookmarks, history, add-ons, sync and settings.
+مثل التنزيلات والعلامات والتأريخ والإضافات والتزامن والإعدادات.
 
 
 ;[New Tab Page] We've also added improvements to your New Tab page.
-[New Tab Page] We've also added improvements to your New Tab page.
+[صفحة اللسان الجديد] كما أضفنا تحسينات على صفحة اللسان الجديد.
 
 
 ;With the New Tab page, you can now easily navigate to your most recent and frequently visited sites in one click.
-With the New Tab page, you can now easily navigate to your most recent and frequently visited sites in one click.
+مع الصفحة الجديدة تستطيع الوصول إلى أكثر المواقع زيارة بنقرة واحدة.
 
 
 ;To start using the New Tab page, create a new tab by clicking the '+' at the top of your browser.
-To start using the New Tab page, create a new tab by clicking the '+' at the top of your browser.
+للبدء في استخدام صفحة اللسان الجديد، أنشئ لسانًا جديدًا بالنقر على '+' في أعلى متصفحك.
 
 
 ;The New Tab page will now display thumbnails of your most recently and frequently visited websites from your Awesome Bar history.
-The New Tab page will now display thumbnails of your most recently and frequently visited websites from your Awesome Bar history.
+ستعرض الصفحة الجديدة مصغرات للمواقع الأكثر زيارة من تأريخ تصفحك.
 
 
 ;You can customize your New Tab page by dragging the thumbnails around to change the order.
-You can customize your New Tab page by dragging the thumbnails around to change the order.
+يمكنك تخصيص الصفحة بتحريك المصغرات وتغيير ترتيبها.
 
 
 ;Click on the pushpin to lock the site into place, or the 'X' button to remove a site.
-Click on the pushpin to lock the site into place, or the 'X' button to remove a site.
+انقر على الدبوس لتصبيت الموقع، أو على زر '×' لحذف الموقع.
 
 
 ;You can also click the 'grid' icon in the top right of the page to go back to the blank new Tab page.
-You can also click the 'grid' icon in the top right of the page to go back to the blank new Tab page.
+يمكنك النقر على أيقونة 'الشبكة' في الركن الأعلى الأيسر لاستعادة صفحة اللسان الجديد الفارغة القديمة.
 
 
 ;Get the latest Firefox now and start using these new features today!
-Get the latest Firefox now and start using these new features today!
+احصل على آخر إصدارة من فيَرفُكس وابدأ باستخدام هذه الخصائص الجديدة اليوم.
