--- a/ar/whatsnew.lang
+++ b/ar/whatsnew.lang
@@ -2,62 +2,62 @@
 
 
 ;Hooray! Your Firefox is up to date.
-Hooray! Your Firefox is up to date.
+مرحا، نسختك من فيَرفُكس مُحدّثة.
 
 
 ;Your Firefox is out of date.
-Your Firefox is out of date.
+نسختك من فيَرفُكس مُحدّثة.
 
 
 ;For security reasons, we recommend upgrading to the <a href="{url}">latest and greatest version</a>.
-For security reasons, we recommend upgrading to the <a href="{url}">latest and greatest version</a>.
+لأسباب أمنية ننصحك بالترقية إلى <a href="{url}">آخر وأحدث إصدارة</a>.
 
 
 ;You’re running an unknown version of Firefox.
-You’re running an unknown version of Firefox.
+تستخدم إصدارة غير معروفة من فيَرفُكس.
 
 
 ;For security reasons, we recommend downloading to the <a href="{url}">latest and greatest version</a>.
-For security reasons, we recommend downloading to the <a href="{url}">latest and greatest version</a>.
+لأسباب أمنية ننصحك بتنزيل <a href="{url}">آخر وأحدث إصدارة</a>.
 
 
 ;Get to your next task<br/>faster than ever
-Get to your next task<br/>faster than ever
+انتقل إلى مهمتك التالية<br/>أسرع من أي وقت مضى
 
 
 ;See how the new features in Firefox help you browse faster and more efficiently.
-See how the new features in Firefox help you browse faster and more efficiently.
+انظر كيف ستساعدك خصائص فيَرفُكس الجديدة على التصفّح أسرع وأكثر فاعلية.
 
 
 ;Learn more about <a href="{url}">the New Tab feature »</a>
-Learn more about <a href="{url}">the New Tab feature »</a>
+اطّلع على المزيد عن <a href="{url}">خاصية اللسان الجديد »</a>
 
 
 ;Learn more about our <a href="{url}">redesigned home page »</a>
-Learn more about our <a href="{url}">redesigned home page »</a>
+اطّلع على المزيد عن <a href="{url}">التصميم الجديد لصفحة البداية »</a>
 
 
 ;Keep in touch
-Keep in touch
+ابق على اطّلاع
 
 
 ;Keep it moving
-Keep it moving
+في كل مكان
 
 
 ;Get Firefox » <b>for Android</b>
-Get Firefox » <b>for Android</b>
+احصل على فيَرفُكس » <b>لأندرويد</b>
 
 
 ;Keep it going
-Keep it going
+تابعنا
 
 
 ;Join Mozilla
-Join Mozilla
+انضمّ إلى موزيلا
 
 
 ;The Android Robot was reproduced from work created and <a href="%s">shared by Google</a> and used according to terms described in the <a href="%s">Creative Commons 3.0 Attribution License</a>.
-The Android Robot was reproduced from work created and <a href="%s">shared by Google</a> and used according to terms described in the <a href="%s">Creative Commons 3.0 Attribution License</a>.
+روبوتات أندرويد أعيد إنتاجها من عمل أنشأته <a href="%s">وشاركته جوجل</a> ومستخدم طبقا للبنود المشروحة في <a href="%s">رخصة المشاع الإبداعي 3.0</a>.
 
 
