--- a/ar/firefoxtesting.lang
+++ b/ar/firefoxtesting.lang
@@ -2,58 +2,58 @@
 
 
 ;Download Firefox Beta for Android - Free
-Download Firefox Beta for Android - Free
+نزّل فيَرفُكس بيتا لأندرويد - مجانيّ
 
 
 ;Download Firefox Beta for Desktop - Free
-Download Firefox Beta for Desktop - Free
+نزّل فيَرفُكس بيتا لسطح المكتب - مجانيّ
 
 
 ;Download and test Firefox future releases. Experience the newest innovations with the Aurora or Beta builds.
-Download and test Firefox future releases. Experience the newest innovations with the Aurora or Beta builds.
+نزّل واختبر إصدارات فيَرفُكس القادمة. تعرّف على آخر الإبداعات في إصدارات أرورا وبيتا.
 
 
 ;Firefox Beta
-Firefox Beta
+فيَرفُكس بيتا
 
 
 ;Firefox Beta for:
-Firefox Beta for:
+فيَرفُكس بيتا ل‍:
 
 
 ;Firefox Beta for Mobile
-Firefox Beta for Mobile
+فيَرفُكس بيتا للجوّال
 
 
 ;Download Beta and be part of the next version of Firefox.
-Download Beta and be part of the next version of Firefox.
+نزّل بيتا وانضم إلى إصدارة فيَرفُكس التالية.
 
 
 ;1. Test Features
-1. Test Features
+1. جرّب الخصائص
 
 
 ;Try out the latest performance, customization and security enhancements almost ready for prime time.
-Try out the latest performance, customization and security enhancements almost ready for prime time.
+جرّب آخر تحسينات الأداء والأمان والتخصيص.
 
 
 ;2. Refine &amp; Polish
-2. Refine &amp; Polish
+2. حسّن واصقل
 
 
 ;File bugs to help us put the final tweaks on performance and functionality in a stable environment.
-File bugs to help us put the final tweaks on performance and functionality in a stable environment.
+أبلغ عن المشاكل لمساعدتنا في وضع اللمسات النهائية على الأداء والخصائص.
 
 
 ;3. Do Your Part
-3. Do Your Part
+3. شارِك
 
 
 ;Have an impact on the next version of Firefox and the 450 million people who use it every day.
-Have an impact on the next version of Firefox and the 450 million people who use it every day.
+أثّر في الإصدارة التالية من فيَرفُكس و 450 مليون شخص يستخدمونه.
 
 
 ;Supported devices
-Supported devices
+الأجهزة المدعومة
 
 
