Review and complete the translation
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@107052 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/ar/download.lang
+++ b/ar/download.lang
@@ -1,9 +1,9 @@
 ;Mozilla Firefox, free web browser, is created by a global non-profit dedicated to putting individuals in control & shaping the future of the web for the public good.
-موزيلا فَيَرفُكس، متصفح الوب الحر، طورته منظمة لا ربحية مكرسة لتجعل التحكم بالوب في أيدي مستخدميه وتجعل مستقبل الوب موافقًا للمصلحة العامة.
+موزيلا فَيَرفُكس، متصفح الوب الحر، طورته منظمة غير ربحية مكرسة لتجعل التحكم بالوب في أيدي مستخدميه وتجعل مستقبل الوب موافقًا للمصلحة العامة.
 
 
 ;Different by Design
-مختلف في التصميم
+مختلف من الأساس
 
 
 ;Proudly <span>non-profit</span>
@@ -23,18 +23,18 @@
 
 
 ;Your download should automatically begin in a few seconds, but if not, <a href="%s">click here</a>.
-تنزيل تلقائيًا خلال ثوان معدودة، فإن لم يفعل، <a href="%s">انقر هنا</a>.
+سيبدأ التنزيل تلقائيًا خلال ثوان معدودة، وإلا <a href="%s">فانقر هنا</a>.
 
 
 ;As a non-profit, we’re free to innovate on your behalf without any pressure to compromise. You’re going to love the difference.
-بما أننا مؤسسة لا ربحية، نملك الحرية للابتكار بدلاً عنك دون أي ضغوط. ستحب رؤية الاختلاف الذي ستحصل عليه.
+بما أننا مؤسسة غير ربحية، نملك الحرية للابتكار بدلًا عنك دون أي ضغوط. ستحب رؤية الاختلاف الذي ستحصل عليه.
 
 
 ;Welcome to the only browser <em>that puts you first.</em>
-أهلاً بك في المتصفح الوحيد الذي <em>يضع مصلحتك قبل أي شيء</em>.
+أهلًا بك في المتصفح الوحيد الذي <em>يضع مصلحتك قبل أي شيء</em>.
 
 
 ;Mozilla Firefox Web Browser
-Mozilla Firefox Web Browser
+متصفح الوب موزيلا فيَرفُكس
 
 
