--- a/ar/firefoxlive.lang
+++ b/ar/firefoxlive.lang
@@ -43,10 +43,10 @@
 
 
 ;Share on Twitter »
-تشارَك على تويتر »
+تشارَك على تويتر ◂
 
 
 ;Share on Facebook »
-تشارَك على فيسبوك »
+تشارَك على فيسبوك ◂
 
 
