--- a/ar/whatsnew.lang
+++ b/ar/whatsnew.lang
@@ -30,11 +30,11 @@
 
 
 ;Learn more about <a href="{url}">the New Tab feature »</a>
-اطّلع على المزيد عن <a href="{url}">خاصية اللسان الجديد »</a>
+اطّلع على المزيد عن <a href="{url}">خاصية اللسان الجديد ◂</a>
 
 
 ;Learn more about our <a href="{url}">redesigned home page »</a>
-اطّلع على المزيد عن <a href="{url}">التصميم الجديد لصفحة البداية »</a>
+اطّلع على المزيد عن <a href="{url}">التصميم الجديد لصفحة البداية ◂</a>
 
 
 ;Keep in touch
@@ -46,7 +46,7 @@
 
 
 ;Get Firefox » <b>for Android</b>
-احصل على فيَرفُكس » <b>لأندرويد</b>
+احصل على فيَرفُكس ◂ <b>لأندرويد</b>
 
 
 ;Keep it going
