done translation for file home dot lang.
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@107067 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/ms/home.lang
+++ b/ms/home.lang
@@ -47,37 +47,36 @@ Tambahkan <br/> speed
 
 
 ;Easy to <br/> access tabs
-Easy to <br/> access tabs
+Mundah untuk <br/> akses tab-tab
 
 ;Productivity <br/> add-ons
-Productivity <br/> add-ons
+Produktiviti <br/> add-ons
 
 
 # Gamer strings: http://www-trunk.stage.mozilla.com/en-GB/firefox/gamer
 
 ;Made for <br/> the way you play.
-Made for <br/> the way you play.
+Dicipta untuk <br/> cara anda bermain.
 
 ;3D <br/> graphics
-3D <br/> graphics
+3D <br/> grafik
 
 ;Even more <br/> reliable
-Even more <br/> reliable
-
+Lebih <br/> dipercayai
 
 # Messaging strings: http://www-trunk.stage.mozilla.com/en-GB/firefox/messaging
 
 ;Effortless <br/> customization
-Effortless <br/> customization
+Tidak susah <br/> dikustomisasi
 
 ;Advanced <br/> security
-Advanced <br/> security
+Sekuriti <br/> diperhebatkan
 
 
 # Streamer strings: http://www-trunk.stage.mozilla.com/en-GB/firefox/streamer
 
 ;Advanced <br/> graphics
-Advanced <br/> graphics
+Grafik <br/> lebih maju
 
 ;Improved <br/> reliability
-Improved <br/> reliability
+Bertambah <br/> dipercayai
