Acholi: large update of translations from Pootle
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@107068 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/ach/newsletter.lang
+++ b/ach/newsletter.lang
@@ -1,6 +1,3 @@
-# These strings are used for subscription forms in pages footers, as well as on http://www-dev.allizom.org/newsletter and http://www-dev.allizom.org/es-ES/newsletter/new
-
-
 ;Get Monthly News
 Nong Lamut Dwe ki dwe
 
@@ -178,18 +175,16 @@ Pwoc me kobi wa pingo itye ka aa woko.
 
 
 ;Mozilla Newsletters
-Mozilla Newsletters
+Waraga me lok angea me Mozilla
 
 
 ;Thanks! Please check your inbox to confirm your subscription.
-Thanks! Please check your inbox to confirm your subscription.
+Pwoc! Tim ber irot ii canduk mamegi wek imok coye ni.
 
 
 ;You'll receive an email from mozilla@e.mozilla.org to confirm your subscription. If you don't see it, check your spam filter. You must confirm your subscription to receive our newsletter.
-You'll receive an email from mozilla@e.mozilla.org to confirm your subscription. If you don't see it, check your spam filter. You must confirm your subscription to receive our newsletter.
+I bi gamo email ki bot mozilla@e.mozilla.org wek imok coye mamegi. Ka ce pe ineno ne, rot lapik me spam. Myero imok coye mamegi wek inwong waraga me kwena wa.
 
 
 ;Please be sure to add our sending address: mozilla@e.mozilla.org to your address book to ensure we always reach your inbox.
-Please be sure to add our sending address: mozilla@e.mozilla.org to your address book to ensure we always reach your inbox.
-
-
+Tim ber inen ada ni imedo address wa me cwalo: mozilla@e.mozilla.org ii buk me address mamegi wek ineni wan wa oo kare lung ii canduk mamegi.
