--- a/ach/snippets.lang
+++ b/ach/snippets.lang
@@ -1,6 +1,3 @@
-# these text snippets are mostly used on about:home
-
-
 ;Take Firefox anywhere you go! The latest Firefox for Android is live and ready for you to enjoy. <a href="%s">Get it now</a>.
 Ter Firefox kan mo keken ma in ibi ceto ie! Firefox ma okati macok coki manyen pi Anroid tye makome ci tye atera piri me nongo yom cwiny ie. <a href="%s">Nong ne kombedi</a>.
 
@@ -126,22 +123,20 @@ Oyot, oyot, oyot. <a %s>Firefox me Android tye ki rwom ma lamal atika</a>. Kony 
 
 
 ;Firefox has new features to make getting to your next task even faster! <a href="%">Check out the video to learn more.</a>
-Firefox has new features to make getting to your next task even faster! <a href="%">Check out the video to learn more.</a>
+Firefox tye ki kit manyen pi miyo donyo i tici matek oyot oyot! <ahref="%"> Rot video wek inong ngec mapol.</a>
 
 
 ;Love Firefox Beta? <a href="%s">Invite your friends</a> to get a sneak peek of what's coming soon to Firefox.
-Love Firefox Beta? <a href="%s">Invite your friends</a> to get a sneak peek of what's coming soon to Firefox.
+Maro Firefox Beta? <a href="%s"> Lwong luwote ni</a> pi donyo ie aliali me winyo ngo mabino kombedi I Firefox.
 
 
 ;I use Firefox Beta to get a sneak peek at the latest features and innovations coming soon to Firefox. <a href="%s">Check it out</a>.
-I use Firefox Beta to get a sneak peek at the latest features and innovations coming soon to Firefox. <a href="%s">Check it out</a>.
+Atiyo ki Firefox Beta aliali pi winyo ngo mabino i kit ma okati macokcoki ki cako bino ne ikare macok coki i Firefox. <ahref=''%''>Rot kong</a>.
 
 
 ;Thanks for using Firefox Beta to help make Firefox more awesome. Now <a href="%s">invite your friends</a> to give it a try.
-Thanks for using Firefox Beta to help make Firefox more awesome. Now <a href="%s">invite your friends</a> to give it a try.
+Pwoc keken pi tic ki Firefox Beta me konyo miyo Firefox bedo mapire tek odoco. Kombedi <a href="%s">lwong luwoteni</a> wek gin tem.
 
 
 ;I use Firefox Beta to help test the latest features and make Firefox more awesome. <a href="%s">Give it a try</a>.
-I use Firefox Beta to help test the latest features and make Firefox more awesome. <a href="%s">Give it a try</a>.
-
-
+An atiyo ki Firefox Beta pi konyo temo kit ma okati manyen ci mii Firefox bedo mapire tek olu. <a href="%s">Tem kong</a>.
