--- a/ach/upgradedialog.lang
+++ b/ach/upgradedialog.lang
@@ -27,7 +27,7 @@ Tye Firefox me cik manyen ma gwoki maber ki imony me wiyamo.
 
 
 ;<a %s>Get the upgrade</a> — it’s fast & free!
-<a %s>Get the upgrade</a> — it’s fast & free! {ok}
+<a %s>Yil rwom ne malu</a> — en dwir & tye me nono!
 
 
 ;get the latest in security
