--- a/ach/whatsnew.lang
+++ b/ach/whatsnew.lang
@@ -1,63 +1,58 @@
-# This is for the Whatsnew page: http://www-dev.allizom.org/firefox/13.0/whatsnew/
-
-
 ;Hooray! Your Firefox is up to date.
-Hooray! Your Firefox is up to date.
+Hooray! Firefox mamegi tye katic ni oo wa tin.
 
 
 ;Your Firefox is out of date.
-Your Firefox is out of date.
+Firefox mamegi kare ne okato woko.
 
 
 ;For security reasons, we recommend upgrading to the <a href="{url}">latest and greatest version</a>.
-For security reasons, we recommend upgrading to the <a href="{url}">latest and greatest version</a>.
+Pi lok me ber bedo, wamoko yilo rwom ne i <a href="{url}">ma okati macok coki ki cik mulobakino</a>.
 
 
 ;You’re running an unknown version of Firefox.
-You’re running an unknown version of Firefox.
+Itye katic ki cik me Firefox ma pe ngene.
 
 
 ;For security reasons, we recommend downloading to the <a href="{url}">latest and greatest version</a>.
-For security reasons, we recommend downloading to the <a href="{url}">latest and greatest version</a>.
+Pi lok me ber bedo, wamoko ada gamo dwoko i <a href="{url}">ma okati ma cokcoki ki cik mulobakino</a>.
 
 
 ;Get to your next task<br/>faster than ever
-Get to your next task<br/>faster than ever
+Nong ii tic mamegi malubo kore<br/>madwir loyo ma onongo tye con
 
 
 ;See how the new features in Firefox help you browse faster and more efficiently.
-See how the new features in Firefox help you browse faster and more efficiently.
+Nen kit me Firefox manyen konyi me yabo me oyoto ci mamwonya.
 
 
 ;Learn more about <a href="{url}">the New Tab feature »</a>
-Learn more about <a href="{url}">the New Tab feature »</a>
+Nong ngec mapol ikom <a href="{url}">kit Dirica matidi Manyen »</a>
 
 
 ;Learn more about our <a href="{url}">redesigned home page »</a>
-Learn more about our <a href="{url}">redesigned home page »</a>
+Nong ngec mapol ikom <a href="{url}"> ikom pot buk me gang wa ma kityeko lingo ne odoco»</a>
 
 
 ;Keep in touch
-Keep in touch
+Bed kube
 
 
 ;Keep it moving
-Keep it moving
+Mii mede dire
 
 
 ;Get Firefox » <b>for Android</b>
-Get Firefox » <b>for Android</b>
+Nong Firefox » <b>Pi Android</b>
 
 
 ;Keep it going
-Keep it going
+Wek woti
 
 
 ;Join Mozilla
-Join Mozilla
+Dony I Mozilla
 
 
 ;The Android Robot was reproduced from work created and <a href="%s">shared by Google</a> and used according to terms described in the <a href="%s">Creative Commons 3.0 Attribution License</a>.
-The Android Robot was reproduced from work created and <a href="%s">shared by Google</a> and used according to terms described in the <a href="%s">Creative Commons 3.0 Attribution License</a>.
-
-
+Kikelo dok Robot me Android ki tic ma kiyubu ci <a href="%s">Google onywako ne</a> kitiyo kwede malube ki lok ma kitito i <a href="%s"> En Maryek odoco i 3.0 Lanycec me Yele pi tiyo</a>.
