--- a/ach/videos/video_fx13.lang
+++ b/ach/videos/video_fx13.lang
@@ -1,42 +1,42 @@
 ;[What's New in Firefox] It's now easier and faster to get where you want to go with the latest Firefox.
-[What's New in Firefox] It's now easier and faster to get where you want to go with the latest Firefox.
+[Ngo Manyen i Firefox] Kombedi dong tye mayot ci dwir me wot ka ma in imito wot kwede ie ki Firefox mukati macokcoki.
 
 
 ;With the redesigned Home page you can now easily access and navigate to your most commonly used menu options.
-With the redesigned Home page you can now easily access and navigate to your most commonly used menu options.
+Ki pot buk me Gang ma kilingo ne odoco kombedi itwero donyo ie labongopeko ci be iwi acaki ma kitiyo kwede ma in iyero.
 
 
 ;Like downloads, bookmarks, history, add-ons, sync and settings.
-Like downloads, bookmarks, history, add-ons, sync and settings.
+Calo kwanyo, keto alama me buk, lok mukato angec, med ikom gin tic ki tero.
 
 
 ;[New Tab Page] We've also added improvements to your New Tab page.
-[New Tab Page] We've also added improvements to your New Tab page.
+[Pot buk me Dirica Matidi manyen] \wan wamedo yubo maber i pot buk me Dirica Matidi megi Manyen.
 
 
 ;With the New Tab page, you can now easily navigate to your most recent and frequently visited sites in one click.
-With the New Tab page, you can now easily navigate to your most recent and frequently visited sites in one click.
+Ki pot buk me Dirica matidi Manyen, kombedi i romo wot iwi i en ma okati ni ki kare lung dyer bar ma kilimo woko i diyo icel keken.
 
 
 ;To start using the New Tab page, create a new tab by clicking the '+' at the top of your browser.
-To start using the New Tab page, create a new tab by clicking the '+' at the top of your browser.
+Pi cako tic ki pot buk me Dirica matidi Manyen, yub dirica matidi kun idiyo '+' iwiye malu pi layeny mamegi.
 
 
 ;The New Tab page will now display thumbnails of your most recently and frequently visited websites from your Awesome Bar history.
-The New Tab page will now display thumbnails of your most recently and frequently visited websites from your Awesome Bar history.
+Pot buk me Dirica matidi Manyen biyaro ka maleng capa cing me en ma kombedi ni ki dyer bar me Web ma kilimo jwijwi ki Bar me lok mamegi maber mukato angec.
 
 
 ;You can customize your New Tab page by dragging the thumbnails around to change the order.
-You can customize your New Tab page by dragging the thumbnails around to change the order.
+I romo keto pot buk me Dirica matidi ni Manyen kun i diro capa cing i akine ne wek i lok kit bedo obed kakare.
 
 
 ;Click on the pushpin to lock the site into place, or the 'X' button to remove a site.
-Click on the pushpin to lock the site into place, or the 'X' button to remove a site.
+Dii kom cor pin wek i pung dyer bar i kel woko, onyo mapeca 'X' wek ikwany dyer bar.
 
 
 ;You can also click the 'grid' icon in the top right of the page to go back to the blank new Tab page.
-You can also click the 'grid' icon in the top right of the page to go back to the blank new Tab page.
+Iromo dang diyo cal me 'rek' i wiye tung cem me pot buk me wot i pot buk me Dirica matidi manyen.
 
 
 ;Get the latest Firefox now and start using these new features today!
-Get the latest Firefox now and start using these new features today!
+Nong Firefox mukati macok coki kombedi ci i cak kit magi manyen tin!
