fix for file main dot lang
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@107070 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/ms/main.lang
+++ b/ms/main.lang
@@ -215,7 +215,7 @@ Video-video
 
 
 ;Except where otherwise <a href="%s">noted</a>, content on this site is licensed under the <br /><a href="%s">Creative Commons Attribution Share-Alike License v3.0</a> or any later version.
-Kecuali dimana sebaliknya <a href="%s">noted</a>, kandungan dalam laman ini adalah diperlesenkan bawah <br /><a href="%s">Creative Commons Attribution Share-Alike License v3.0</a> atau sebarang versi yang sebelumnya.
+Kecuali dimana sebaliknya <a href="%s">secara khusus</a>, kandungan dalam laman ini adalah diperlesenkan bawah <br /><a href="%s">Creative Commons Attribution Share-Alike License v3.0</a> atau sebarang versi yang sebelumnya.
 
 
 ;Report Trademark Abuse
