Acholi: video's translated
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@107071 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/ach/videos/video_box.lang
+++ b/ach/videos/video_box.lang
@@ -7,11 +7,11 @@ canduk obedo loc me cobo odoco gin matye ie.
 
 
 ;Basically the simplest way for business users
-Basically the simplest way for business users
+Yore mayot pi lutic kwede me cato wil
 
 
 ;to manage, share and access content that they care about
-to manage, share and access content that they care about
+pi loyo, nywak ci donyo i gin matye ie ma gin kigwoko pire
 
 
 ;on any device be it a mobile device, a tablet or their desktop.
@@ -51,31 +51,31 @@ Ki lawote kikome, jami wa obedo jami me Web, dong cwalo dwoko i HTML5
 
 
 ;was just adding on a couple of extra things to it.
-was just adding on a couple of extra things to it.
+onongo atye ka medo ka ikom jami madit loyo ikome
 
 
 ;Since we have adopted HTML5 technology both for our web product and for our default mobile page,
-Since we have adopted HTML5 technology both for our web product and for our default mobile page,
+Kit ma wan wakelo rwom ngec me HTML gin weng pi jami me web ci pi pot buk me wa ma kiwoto kwede awota,
 
 
 ;so that our web page can work by default on any device,
-so that our web page can work by default on any device,
+wek pot buk wa me web romo tic akadi ningo ikom jami tic mo keken,
 
 
 ;we have invested in a unique Android application and a unique iPhone application
-we have invested in a unique Android application and a unique iPhone application
+wan waketo tek i keto Android ki keto iPhone mamwonya atika
 
 
 ;but we still have a one-size-fits-all web page for all mobile devices in general.
-but we still have a one-size-fits-all web page for all mobile devices in general.
+ento pwod watye ki dite-acel-romo-pot buk me web weng pi jami tic ducu.
 
 
 ;What was really interesting for us with working with Mozilla and the Marketplace
-What was really interesting for us with working with Mozilla and the Marketplace
+Ngo ma yomo ii wa tutwal kwede tic ki Mozilla ki ka Cuk
 
 
 ;is offering our service to the people who need it in the form that they need it.
-is offering our service to the people who need it in the form that they need it.
+tye kamiyo tic wa bot jo mamito ne i kit ma gin mito ne kwede
 
 
 ;We are aware that Mozilla does also have quite a few users and its always been official
