--- a/ach/videos/video_evernote.lang
+++ b/ach/videos/video_evernote.lang
@@ -47,15 +47,15 @@ pi makopot buk ma gin neno ci dong kipoo wi gi lacen,
 
 
 ;even when they are offline and they don’t have access to the Internet.
-even when they are offline and they don’t have access to the Internet.
+akadi ce gin pe iwi yamo ki kadi intanet pe botgi,
 
 
 ;Using modern web technologies lets us give the best and richest experience we can for our users.
-Using modern web technologies lets us give the best and richest experience we can for our users.
+Tic ki diro me Web me kare ni weko wa miyo diro maber ki lonyo wa ma watwero bot lutic kwede.
 
 
 ;So HTML5 gave a fast user experience.
-So HTML5 gave a fast user experience.
+Dong HTML5 omiyo diro pa lutic madwir.
 
 
 ;It has all the things you expect from a desktop application
@@ -95,12 +95,12 @@ pi nongo cwalo tic wa dwoko ika  cuk
 
 
 ;was straightforward and very self-explanatory.
-was straightforward and very self-explanatory.
+onongo lokolok atir ci niango ne yot.
 
 
 ;The advertising and access to new users from the web is great through the Mozilla Marketplace.
-The advertising and access to new users from the web is great through the Mozilla Marketplace.
+Rabo kwena me cato wil ci dony i lutic kwede manyen ki web tek atika kun beo i Cuk me Mozilla
 
 
 ;distribute your apps
-distribute your apps
+pok apps mamegi
