--- a/ach/videos/video_teambox.lang
+++ b/ach/videos/video_teambox.lang
@@ -1,5 +1,5 @@
 ;Your apps on all your devices
-Your apps on all your devices
+Apps mamegi ikom jami tici weng
 
 
 ;Teambox is an online collaboration software that can be hosted in the cloud or onsite
@@ -43,39 +43,39 @@ mukene tye i teblet, mukene tye i kom kiome wang kompiuta,
 
 
 ;but we know that all of them have a consistent and great user experience using HTML5
-but we know that all of them have a consistent and great user experience using HTML5
+ento wan wangeo ni gin weng ber ci diro maber pi lutic kwede kun tiyo ki HTML5
 
 
 ;and that gives us a lot of assurance as a software developer.
-and that gives us a lot of assurance as a software developer.
+ci meno miyowa moko ada calo luyub purugram me kompiuta.
 
 
 ;Obviously we could build native applications, but doing so,
-Obviously we could build native applications, but doing so,
+Watwero gero purugram me ka mo ni, ento timo kit eni ni,
 
 
 ;for a small fast-growing company like us,
-for a small fast-growing company like us,
+pi kampuni matidi dang dok tye kadongo calo wan,
 
 
 ;takes a lot of time, a lot of extra money and
-takes a lot of time, a lot of extra money and
+tero cawa madwong, cente onyo lim mabup ki
 
 
 ;it impacts our ability to deliver a great app to market sooner.
-it impacts our ability to deliver a great app to market sooner.
+ber botwa me kelo purugram madit pi cato ne i kare macokcoki.
 
 
 ;So we made the decision not to build native apps
-So we made the decision not to build native apps
+Wek dong wamok tam pe me dongo apps mo ni
 
 
 ;and we’re using technologies like HTML5 to get to market faster
-and we’re using technologies like HTML5 to get to market faster
+ci wan watiyo ki diro me ngec calo HTML5 me wot i cuk oyot oyot
 
 
 ;with better products and ultimately to deliver a better user experience for our customers.
-with better products and ultimately to deliver a better user experience for our customers.
+ki jami maber ki tute me kelo diro pa latic kwede bot luwil wa.
 
 
 ;Quite frankly we see it as a terrific onramp for our business
