Songhay: minor updates and first translations for mobile
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@107072 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/son/firefoxtesting.lang
+++ b/son/firefoxtesting.lang
@@ -7,19 +7,19 @@ Firefox Beta zumandi ordinater še - Forba
 
 
 ;Download and test Firefox future releases. Experience the newest innovations with the Aurora or Beta builds.
-Download and test Firefox future releases. Experience the newest innovations with the Aurora or Beta builds.
+Hiino Firefox šiiyan dumi bangantey zumandi. War ma dii goy teji kokorantey Aurora nda Beta cinarey ra.
 
 
 ;Firefox Beta
-Firefox Beta
+Firefox Beta {ok}
 
 
 ;Firefox Beta for:
-Firefox Beta for:
+Firefox Beta še:
 
 
 ;Firefox Beta for Mobile
-Firefox Beta for Mobile
+Firefox Beta kanbe jinay še
 
 
 ;Download Beta and be part of the next version of Firefox.
