Wolof: large update of everything except two videos translated.
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@107073 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/wo/home.lang
+++ b/wo/home.lang
@@ -11,7 +11,7 @@ Gën gaaw
 
 
 ;Accelerate the way you use the web.
-Gënal gaawal ni ngay jëfandikoo Web bi.
+Gënal gaawal ni ngay jëfandikoo web bi.
 
 
 ;Stay Safe
@@ -75,11 +75,11 @@ Jéem <br/> solal
 
 
 ;Advanced <br/> security
-Jëm Kanam <br/> kaarange
+Jëm kanam <br/> kaarange
 
 
 ;Advanced <br/> graphics
-Jëm Kanam <br/> garafik
+Jëm kanam <br/> garafik
 
 
 ;Improved <br/> reliability
