--- a/wo/main.lang
+++ b/wo/main.lang
@@ -159,7 +159,7 @@ Da nga wara <a href="http://get.adobe.com/flashplayer/">yeesal Adobe Flash Playe
 
 
 ;Firefox is up to date, but your current version of Flash Player can cause security and stability issues.  Please <a href="http://get.adobe.com/flashplayer/">install the free update</a> as soon as possible.
-Firefox yees na, wante sa sumbu bii Flash Player mën na indi ay jafe jafe ci wallu kaarange ak dëgaraay.   Digal nañu la <a href="http://get.adobe.com/flashplayer/">nga samp yeesal yi </a> ci lumu ëna gaawe.
+Firefox yees na, wante sa sumbu bii Flash Player mën na indi ay jafe jafe ci wallu kaarange ak dëgaraay.   Digal nañu la <a href="http://get.adobe.com/flashplayer/">nga samp yeesal yi </a> ci lumu gëna gaawe.
 
 
 ;Features
