--- a/wo/mobile.lang
+++ b/wo/mobile.lang
@@ -111,7 +111,7 @@ Xool bu gaaw te yomb
 
 
 ;Features like Sync, tabbed browsing and one-touch bookmarking mean everything you want is close at hand.
-Ay bees bees yu melni Sync, njoowum koñ ak lo bëgg m¨n nga ko jot.
+Ay bees bees yu melni Sync, njoowum koñ ak lo bëgg mën nga ko jot.
 
 
 ;<a %s>Need help?</a> Visit our Firefox for Android Support site.
