--- a/wo/newsletter.lang
+++ b/wo/newsletter.lang
@@ -83,7 +83,7 @@ Suñu yeneen xibaarukaay:
 
 
 ;Get the latest tips and tricks for getting the most out of your favorite browser.
-Amal pexe yi mujj gir mëna Jëfandikoo bu baax sa joowkat bi nga taamu.
+Amal pexe yi mujj gir mëna jëfandikoo bu baax sa joowkat bi nga taamu.
 
 
 ;Firefox Mobile
