--- a/wo/snippets.lang
+++ b/wo/snippets.lang
@@ -71,7 +71,7 @@ Teel ko jot te dimmali ñu defar ëlëgu Firefox. <a href="%s">Yebal Firefox Aur
 
 
 ;Firefox for Android is now optimized for the way you browse on tablets. <a href="%s">Get the power of the Web at your fingertips</a>.
-Firefox bu Android defar nañu ko ci ngir joow ci tabalet yi. <a href="%s"> Jëllal doole Web bi ci say baaraam</a>.
+Firefox bu Android defar nañu ko ngir joow ci tabalet yi. <a href="%s">Jëllal doole Web bi ci say baaraam</a>.
 
 
 ;Download Firefox on your Android tablet and put the power of the Web right in your hands. <a href="%s">Get it now</a>.
@@ -119,7 +119,7 @@ Jëfandikoo Firefox ci ordinatëër yu bari? Leegi mën nga jokkalante say modil
 
 
 ;Fast, fast, fast. <a %s>Firefox for Android just got a big upgrade</a>. Help us spread the word.
-Gaawalagaaw. <a %s> Firefox bu Android am yeesal bu mag</a>. Dimmali ñu tasaare mbir moomule.
+Gaawalagaaw. <a %s>Firefox bu Android am yeesal bu mag</a>. Dimmali ñu tasaare mbir moomule.
 
 
 ;Firefox has new features to make getting to your next task even faster! <a href="%">Check out the video to learn more.</a>
