--- a/wo/upgradedialog.lang
+++ b/wo/upgradedialog.lang
@@ -55,7 +55,7 @@ Përëfitool ci bees bees yi
 
 
 ;URGENT!
-JAMP!
+JAMP NA!
 
 
 ;Your version of Firefox is no longer protected against online attacks.
