--- a/wo/videos/video_box.lang
+++ b/wo/videos/video_box.lang
@@ -7,7 +7,7 @@ boyet pexe saytu këmbu antarpëriis.
 
 
 ;Basically the simplest way for business users
-Ci dëgg dëgg mooy yoon wi gëna yommb ci jëfandikookat yi xerañ
+Ci dëgg dëgg mooy yoon wi gëna yomb ci jëfandikookat yi xerañ
 
 
 ;to manage, share and access content that they care about
