--- a/wo/videos/video_teambox.lang
+++ b/wo/videos/video_teambox.lang
@@ -1,5 +1,5 @@
 ;Your apps on all your devices
-Say Jëfekaay ci sa aparey yépp
+Say jëfekaay ci sa aparey yépp
 
 
 ;Teambox is an online collaboration software that can be hosted in the cloud or onsite
