--- a/ar/newsletter.lang
+++ b/ar/newsletter.lang
@@ -50,146 +50,146 @@
 
 
 ;Subscribe to monthly updates and keep current with Mozilla news, including the latest tips and tricks for getting the most out of your Firefox browser. It’s the perfect way for us to keep in touch!
-Subscribe to monthly updates and keep current with Mozilla news, including the latest tips and tricks for getting the most out of your Firefox browser. It’s the perfect way for us to keep in touch!
+اشترك في الأخبار الشهرية وابق على اطلاع بآخر مستجدات موزيلا، بما فيها التلميحات والمساعدات عن المزايا الجديدة في فَيَرفُكس. أفضل وسيلة لنبقى على تواصل.
 
 
 ;We just sent you a confirmation message by email. Click on the confirmation link in this email to validate your subscription to this mailing list.
-We just sent you a confirmation message by email. Click on the confirmation link in this email to validate your subscription to this mailing list.
+لقد أرسلنا للتو رسالة التأكيد بالبريد. انقر على وصلة التأكيد في هذه الرسالة لتأكيد اشتراكك في هذه القائمة البريدية.
 
 
 ;Read all about it in our <span>newsletter</span>
-Read all about it in our <span>newsletter</span>
+اعرف أكثر عن <span>الرسالة الإخبارية</span>
 
 
 ;Your newsletter subscription has been confirmed.
-Your newsletter subscription has been confirmed.
+أُكّد اشتراكك في الرسالة الإخبارية.
 
 
 ;Format
-Format
+التنسيق
 
 
 ;You’re All Set! <span>But Wait, There’s More</span>
-You’re All Set! <span>But Wait, There’s More</span>
+كل شيء جاهز، <span>لكن انتظر، هناك المزيد</span>
 
 
 ;Want to get the most relevant info? Tell us a little more about yourself. And while you’re here, sign up for other Mozilla news.
-Want to get the most relevant info? Tell us a little more about yourself. And while you’re here, sign up for other Mozilla news.
+أتريد الحصول على المعلومات المهمة؟ أخبرنا القليل عن نفسك. وبينما أنت هنا، اشترك في أخبار موزيلا الأخرى.
 
 
 ;Firefox & You
-Firefox & You
+فَيَرفُكس و أنت
 
 
 ;Our Other Newsletters:
-Our Other Newsletters:
+رسائلنا الإخبارية الأخرى:
 
 
 ;Get the latest tips and tricks for getting the most out of your favorite browser.
-Get the latest tips and tricks for getting the most out of your favorite browser.
+احصل على آخر التلميحات والمساعدات عن المزايا الجديدة في متصفحك المفضّل.
 
 
 ;Firefox Mobile
-Firefox Mobile
+فَيَرفُكس للجوال
 
 
 ;Learn about the hottest new add-ons and features for Firefox mobile.
-Learn about the hottest new add-ons and features for Firefox mobile.
+تعرّف على أحدث الإضافات والخصائص في فَيَرفُكس للجوال.
 
 
 ;Beta News
-Beta News
+أخبار بيتا
 
 
 ;Read about the latest features for Firefox desktop and mobile before the final release.
-Read about the latest features for Firefox desktop and mobile before the final release.
+اقرأ عن آخر خصائص فَيَرفُكس لسطح المكتب والجوال قبل الإصدارة النهائية.
 
 
 ;Let’s Be Friends!
-Let’s Be Friends!
+لنكن أصدقاء!
 
 
 ;Firefox is also on your favorite social networking sites. Connect with us and join the conversation.
-Firefox is also on your favorite social networking sites. Connect with us and join the conversation.
+فَيَرفُكس موجود أيضا على مواقع التواصل الاجتماعي التي تفضلها. تواصل معنا وانضم للنقاش.
 
 
 ;Manage your <span>Newsletter Subscriptions</span>
-Manage your <span>Newsletter Subscriptions</span>
+أدر <span>اشتراكك في الرسالة الإخبارية</span>
 
 
 ;Subscribe
-Subscribe
+اشترك
 
 
 ;Unsubscribe
-Unsubscribe
+ألغِ الاشتراك
 
 
 ;Check here if you’d like to be removed from all Mozilla emails
-Check here if you’d like to be removed from all Mozilla emails
+انقر هنا إذا أردت أن تُزال من كل رسائل موزيلا البريدية
 
 
 ;Remove me from all Mozilla emails
-Remove me from all Mozilla emails
+أزلني من كل رسائل موزيلا البريدية
 
 
 ;Save Preferences
-Save Preferences
+احفظ التفضيلات
 
 
 ;Thanks for updating your email preferences.
-Thanks for updating your email preferences.
+شكرا لتحديث تفضيلات البريد
 
 
 ;You've been unsubscribed.
-You've been unsubscribed.
+لقد أُلغي اشتراكك.
 
 
 ;We’re sorry to see you go. Would you mind telling us why you’re leaving?
-We’re sorry to see you go. Would you mind telling us why you’re leaving?
+نأسف لمغادرتك. أترغب في إطلاعنا على الأسباب؟
 
 
 ;You send too many emails.
-You send too many emails.
+ترسلون الكثير من الرسائل.
 
 
 ;Your content wasn't relevant to me.
-Your content wasn't relevant to me.
+محتواكم لا يهمني.
 
 
 ;Your email design was too hard to read.
-Your email design was too hard to read.
+تصميم رسائلكم صعب القراءة.
 
 
 ;I didn't sign up for this.
-I didn't sign up for this.
+لم أشترك لهذا.
 
 
 ;I'm keeping in touch with Mozilla on Facebook and Twitter instead.
-I'm keeping in touch with Mozilla on Facebook and Twitter instead.
+أتواصل مع موزيلا عبر فيسبوك وتويتر بدلا من هذا.
 
 
 ;Submit
-Submit
+أرسل
 
 
 ;Thanks for telling us why you’re leaving.
-Thanks for telling us why you’re leaving.
+شكرا لإطلاعنا على سبب مغادرتك.
 
 
 ;Mozilla Newsletters
-Mozilla Newsletters
+رسائل موزيلا الإخبارية
 
 
 ;Thanks! Please check your inbox to confirm your subscription.
-Thanks! Please check your inbox to confirm your subscription.
+شكرا. من فضلك راجع صندوق الوارد لتأكيد اشتراكك.
 
 
 ;You'll receive an email from mozilla@e.mozilla.org to confirm your subscription. If you don't see it, check your spam filter. You must confirm your subscription to receive our newsletter.
-You'll receive an email from mozilla@e.mozilla.org to confirm your subscription. If you don't see it, check your spam filter. You must confirm your subscription to receive our newsletter.
+ستصلك رسالة من mozilla@e.mozilla.org لتأكيد اشتراكك. إذا لم ترها فراجع مرشّح الرسائل المزعجة (السخام). يجب أن تأكّد اشتراكك لتصلك الرسائل الإخبارية.
 
 
 ;Please be sure to add our sending address: mozilla@e.mozilla.org to your address book to ensure we always reach your inbox.
-Please be sure to add our sending address: mozilla@e.mozilla.org to your address book to ensure we always reach your inbox.
+من فضلك تأكد من إضافة عنواننا: mozilla@e.mozilla.org إلى دفتر عناوينك لتضمن أن تصلك الرسائل دائما.
 
 
